added border to content and changed crew to pull from string[] array

--- a/mission-planning-dashboard/src/app/app.component.css
+++ b/mission-planning-dashboard/src/app/app.component.css
@@ -1,4 +1,8 @@
 .box {
     display: flex;
+    width: fit-content;
     padding: 10px;
+    border: 1px solid red;
+    box-sizing: border-box;
+    
 }
